Perubahan gambar folder

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     class="absolute place-self-center justify-center w-full z-[-10]"
                   >
                     <img
-                      src="/dist/Image/Cahayabiru.png"
+                      src="dist/Image/Cahayabiru.png"
                       alt=""
                       class="absolute place-self-center justify-center left-[-1rem] opacity-80 bottom-[-39rem] h-[15rem] w-[80rem]"
                     />
