--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
       rel="stylesheet"
     />
 
+    <!-- Three.JS -->
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.180.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.180.0/examples/jsm/"
+        }
+      }
+    </script>
+
     <!-- AOS CSS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -814,11 +824,40 @@
                   alt="logon"
                   class="w-[7.5rem] h-[3.5rem] mb-7 grayscale-100 opacity-70 hover:grayscale-0 hover:opacity-100 transition-opacity duration-300 ease-linear"
                 />
-                <h3 class="font-bold text-xl mb-2">HUBUNGI EMAIL</h3>
-                <p>Hazmi</p>
-                <p>Tulangan - Sidoarjo</p>
+                <h3 class="font-bold text-xl mb-2 text-slate-100">HUBUNGI</h3>
+                <div class="">
+                  <div class="flex gap-3">
+                    <a href="mailto:muhammadhazmiwafifa@gmail.com" class="flex"
+                      ><img
+                        src="dist/Image/Gmail_icon.svg"
+                        alt="gmail"
+                        class="w-6 h-6 grayscale-100 opacity-45 hover:grayscale-0 scale-none hover:opacity-100 hover:scale-[1.1] trasition-all duration-300 ease-in-out" /></a
+                    ><a href="https://wa.link/o6osmx"
+                      ><img
+                        src="dist/Image/WhatsApp.svg"
+                        alt="whatsapp"
+                        class="w-6.5 h-6.5 grayscale-100 opacity-45 hover:grayscale-0 scale-none hover:opacity-100 hover:scale-[1.1] trasition-all duration-300 ease-in-out"
+                    /></a>
+                  </div>
+                  <div
+                    class="pt-5 font-medium text-[1rem] text-slate-300 grayscale-100 opacity-75 hover:grayscale-0 scale-none hover:opacity-100 hover:scale-[1.02] trasition-all duration-300 ease-in-out"
+                  >
+                    <a href="https://maps.app.goo.gl/vnFwxzekfwZSmUdj7"
+                      ><span class="font-bold uppercase tracking-[0.1em] flex"
+                        ><img
+                          src="dist/Image/Google_Maps.svg"
+                          alt="google maps"
+                          class="w-6 h-6 pr-2"
+                        />Office :</span
+                      >
+                      <p class="pt-1.5 text-[0.9rem] font-light">
+                        Ds. Kedondong, <br />Kec. Tulangan Kab. Sidoarjo
+                      </p></a
+                    >
+                  </div>
+                </div>
               </div>
-              <div class="w-full px-4 mb-12 md:w-1/3">
+              <div class="w-full px-4 mb-12 md:w-1/4">
                 <h3 class="font-semibold text-rodokputih text-xl mb-5">
                   KATEGORI BLOG
                 </h3>
@@ -855,54 +894,51 @@
                   <a
                     href="https://Instagram.com/nurbanner.sidoarjo"
                     target="blank"
-                    class="sosmed w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:border-pink-500 hover:bg-gradient-to-br from-indigo-500 from-10% via-pink-500 via-30% to-orange-500 to-90% hover:w-13 hover:h-13 hover:scale-[1.1] hover:text-white transition-all duration-300 delay-100 ease-in-out"
+                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:border-pink-500 hover:bg-gradient-to-br from-indigo-500 from-10% via-pink-500 via-30% to-orange-500 to-90% hover:w-13 hover:h-13 hover:scale-[1.1] hover:text-white transition-all duration-300 delay-100 ease-in-out"
                   >
                     <svg
-                      role="img"
-                      width="20"
-                      class="fill-current"
-                      viewBox="0 0 24 24"
                       xmlns="http://www.w3.org/2000/svg"
+                      width="200"
+                      height="200"
+                      viewBox="0 0 24 24"
                     >
-                      <title>Instagram</title>
                       <path
-                        d="M7.0301.084c-1.2768.0602-2.1487.264-2.911.5634-.7888.3075-1.4575.72-2.1228 1.3877-.6652.6677-1.075 1.3368-1.3802 2.127-.2954.7638-.4956 1.6365-.552 2.914-.0564 1.2775-.0689 1.6882-.0626 4.947.0062 3.2586.0206 3.6671.0825 4.9473.061 1.2765.264 2.1482.5635 2.9107.308.7889.72 1.4573 1.388 2.1228.6679.6655 1.3365 1.0743 2.1285 1.38.7632.295 1.6361.4961 2.9134.552 1.2773.056 1.6884.069 4.9462.0627 3.2578-.0062 3.668-.0207 4.9478-.0814 1.28-.0607 2.147-.2652 2.9098-.5633.7889-.3086 1.4578-.72 2.1228-1.3881.665-.6682 1.0745-1.3378 1.3795-2.1284.2957-.7632.4966-1.636.552-2.9124.056-1.2809.0692-1.6898.063-4.948-.0063-3.2583-.021-3.6668-.0817-4.9465-.0607-1.2797-.264-2.1487-.5633-2.9117-.3084-.7889-.72-1.4568-1.3876-2.1228C21.2982 1.33 20.628.9208 19.8378.6165 19.074.321 18.2017.1197 16.9244.0645 15.6471.0093 15.236-.005 11.977.0014 8.718.0076 8.31.0215 7.0301.0839m.1402 21.6932c-1.17-.0509-1.8053-.2453-2.2287-.408-.5606-.216-.96-.4771-1.3819-.895-.422-.4178-.6811-.8186-.9-1.378-.1644-.4234-.3624-1.058-.4171-2.228-.0595-1.2645-.072-1.6442-.079-4.848-.007-3.2037.0053-3.583.0607-4.848.05-1.169.2456-1.805.408-2.2282.216-.5613.4762-.96.895-1.3816.4188-.4217.8184-.6814 1.3783-.9003.423-.1651 1.0575-.3614 2.227-.4171 1.2655-.06 1.6447-.072 4.848-.079 3.2033-.007 3.5835.005 4.8495.0608 1.169.0508 1.8053.2445 2.228.408.5608.216.96.4754 1.3816.895.4217.4194.6816.8176.9005 1.3787.1653.4217.3617 1.056.4169 2.2263.0602 1.2655.0739 1.645.0796 4.848.0058 3.203-.0055 3.5834-.061 4.848-.051 1.17-.245 1.8055-.408 2.2294-.216.5604-.4763.96-.8954 1.3814-.419.4215-.8181.6811-1.3783.9-.4224.1649-1.0577.3617-2.2262.4174-1.2656.0595-1.6448.072-4.8493.079-3.2045.007-3.5825-.006-4.848-.0608M16.953 5.5864A1.44 1.44 0 1 0 18.39 4.144a1.44 1.44 0 0 0-1.437 1.4424M5.8385 12.012c.0067 3.4032 2.7706 6.1557 6.173 6.1493 3.4026-.0065 6.157-2.7701 6.1506-6.1733-.0065-3.4032-2.771-6.1565-6.174-6.1498-3.403.0067-6.156 2.771-6.1496 6.1738M8 12.0077a4 4 0 1 1 4.008 3.9921A3.9996 3.9996 0 0 1 8 12.0077"
+                        fill="currentColor"
+                        d="M12 7.9a4.1 4.1 0 1 0 4.1 4.1A4.09 4.09 0 0 0 12 7.9Zm0 6.77A2.67 2.67 0 1 1 14.67 12A2.67 2.67 0 0 1 12 14.67Zm5.23-6.94a1 1 0 1 1-1-1a1 1 0 0 1 1 1Zm2.71 1a4.71 4.71 0 0 0-1.29-3.35a4.71 4.71 0 0 0-3.35-1.32C14 4 10 4 8.7 4.06a4.73 4.73 0 0 0-3.35 1.29A4.71 4.71 0 0 0 4.06 8.7C4 10 4 14 4.06 15.3a4.71 4.71 0 0 0 1.29 3.35a4.73 4.73 0 0 0 3.35 1.29c1.32.08 5.28.08 6.6 0a4.71 4.71 0 0 0 3.35-1.29a4.71 4.71 0 0 0 1.29-3.35c.06-1.3.06-5.3 0-6.6Zm-1.7 8a2.7 2.7 0 0 1-1.52 1.52a18 18 0 0 1-4.72.32a17.91 17.91 0 0 1-4.71-.32a2.7 2.7 0 0 1-1.52-1.52c-.42-1.06-.33-3.56-.33-4.72s-.09-3.67.33-4.72a2.65 2.65 0 0 1 1.52-1.53A17.91 17.91 0 0 1 12 5.44a18 18 0 0 1 4.72.32a2.7 2.7 0 0 1 1.52 1.52c.42 1.06.32 3.56.32 4.72s.1 3.67-.32 4.72Z"
                       />
                     </svg>
                   </a>
                   <a
                     href="https://tiktok.com/@nur.banner"
                     target="blank"
-                    class="sosmed w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.1] hover:border-primary hover:bg-gray-950 hover:text-white transition-all duration-300 delay-100 ease-in-out"
+                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.01] hover:border-primary hover:bg-gray-950 hover:text-white transition-all duration-300 delay-100 ease-in-out"
                   >
                     <svg
-                      role="img"
-                      width="20"
-                      class="fill-current"
-                      viewBox="0 0 24 24"
                       xmlns="http://www.w3.org/2000/svg"
+                      width="200"
+                      height="200"
+                      viewBox="0 0 24 24"
                     >
-                      <title>TikTok</title>
                       <path
-                        d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z"
+                        fill="currentColor"
+                        d="M12.438 2.017C13.53 2 14.613 2.008 15.696 2c.067 1.275.525 2.575 1.459 3.475c.933.925 2.25 1.35 3.533 1.492v3.358c-1.2-.042-2.408-.292-3.5-.808c-.475-.217-.917-.492-1.35-.775c-.008 2.433.008 4.866-.017 7.291a6.36 6.36 0 0 1-1.125 3.283c-1.091 1.6-2.983 2.642-4.924 2.675c-1.192.067-2.384-.258-3.4-.858c-1.684-.992-2.867-2.808-3.042-4.758a16 16 0 0 1-.008-1.242c.15-1.583.933-3.1 2.15-4.133c1.383-1.2 3.316-1.775 5.125-1.433c.016 1.233-.034 2.466-.034 3.7c-.825-.267-1.791-.192-2.516.308a2.9 2.9 0 0 0-1.134 1.458c-.175.425-.125.892-.116 1.342c.2 1.366 1.516 2.516 2.916 2.392c.934-.009 1.825-.55 2.309-1.342c.158-.275.333-.559.341-.884c.084-1.491.05-2.975.059-4.466c.008-3.358-.009-6.708.016-10.058"
                       />
                     </svg>
                   </a>
                   <a
-                    href="https://wa.link/o6osmx"
+                    href="https://www.behance.net/nurbanner"
                     target="blank"
-                    class="sosmed w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.1] delay-100 hover:border-green-600 hover:bg-green-600 hover:text-white transition-all duration-300 ease-in-out"
+                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.01] delay-100 hover:border-[#172afb] hover:bg-[#172afb] hover:text-white transition-all duration-300 ease-in-out"
                   >
                     <svg
-                      role="img"
-                      width="20"
-                      class="fill-current"
-                      viewBox="0 0 24 24"
                       xmlns="http://www.w3.org/2000/svg"
+                      width="200"
+                      height="200"
+                      viewBox="0 0 24 24"
                     >
-                      <title>WhatsApp</title>
                       <path
-                        d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"
+                        fill="currentColor"
+                        d="M10.396 11.519h-.108l.24-.132a2.333 2.333 0 0 0 1.095-1.203a3.464 3.464 0 0 0 .145-1.697a2.815 2.815 0 0 0-1.732-2.297a4.728 4.728 0 0 0-1.925-.385H2v12.354h5.582a9.448 9.448 0 0 0 1.587-.132a3.465 3.465 0 0 0 2.659-1.973a3.741 3.741 0 0 0 .3-2.406a2.694 2.694 0 0 0-1.732-2.13ZM4.9 7.959h2.406a4.67 4.67 0 0 1 1.203.156a1.035 1.035 0 0 1 .794.926a1.9 1.9 0 0 1 0 .746a.999.999 0 0 1-.517.65a2.478 2.478 0 0 1-1.203.264H4.875Zm4.655 6.904a1.395 1.395 0 0 1-1.202 1.13a4.363 4.363 0 0 1-.794.085H4.875v-3.272h2.863a2.72 2.72 0 0 1 .902.156a1.311 1.311 0 0 1 .914 1.203a2.549 2.549 0 0 1 0 .698Zm12.439-.806c.012-.024.012-.048-.024-.024v-1.335a4.379 4.379 0 0 0-.41-1.769a3.729 3.729 0 0 0-1.924-1.852a5.137 5.137 0 0 0-2.947-.289a3.886 3.886 0 0 0-3.212 2.815a6.7 6.7 0 0 0-.144 3.465a3.5 3.5 0 0 0 .866 1.732a4.523 4.523 0 0 0 2.069 1.203a5.45 5.45 0 0 0 2.321.12a4.006 4.006 0 0 0 2.515-1.323a3.165 3.165 0 0 0 .71-1.203a.523.523 0 0 0 .084-.349H19.54a.12.12 0 0 0-.12.072a1.708 1.708 0 0 1-1.203.902a2.681 2.681 0 0 1-1.083 0a1.9 1.9 0 0 1-1.432-1.058a2.406 2.406 0 0 1-.204-.722v-.385Zm-6.352-1.732a4.515 4.515 0 0 1 .193-.566a1.732 1.732 0 0 1 1.576-1.082a2.287 2.287 0 0 1 1.046.144a1.78 1.78 0 0 1 1.13 1.444v.252l-3.945.036a2.099 2.099 0 0 1 0-.228Zm4.415-6.015h-5.004v1.444l5.004-.012Z"
                       />
                     </svg>
                   </a>
@@ -936,15 +972,5 @@
 
     <!-- Tailwind Script -->
     <script src="dist/js/script.js"></script>
-
-    <!-- Three.JS -->
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.180.0/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.180.0/examples/jsm/"
-        }
-      }
-    </script>
   </body>
 </html>
