Perubahan Porfolio dan versi mobile

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 class="container lg:justify-items-end lg:text-right lg:right-0 sm:right-[none] sm:text-center sm:justify-items-center"
               >
                 <p
-                  class="definisi lg:end-0 lg:w-1/5 text-[0.8rem] font-light tracking-wider text-[rgba(178,224,255,0.7)] top-[-1rem] lg:px-10"
+                  class="definisi lg:end-0 lg:w-1/5 text-[0.8rem] font-light tracking-wider text-[rgba(178,224,255,0.7)] top-[-1rem] lg:px-10 px-auto lg:text-right text-center"
                   aria-hidden="true"
                 >
                   We are a creative team dedicated to creating attractive
@@ -196,7 +196,7 @@
                 </p>
               </div>
               <div
-                class="scrollto absolute flex bottom-30 lg:justify-items-start items-center px-10 lg:text-left lg:w-1/4 sm:w-full sm:text-center sm:justify-items-center sm:justify-center z-10 overflow-hidden"
+                class="scrollto absolute flex bottom-30 lg:justify-items-start items-center px-10 lg:text-left lg:w-1/4 w-full text-center justify-center z-10 overflow-hidden"
               >
                 <p
                   class="definisi2 flex items-center bg-left bg-[length:200%_100%] opacity-100 bg-gradient-to-r from-[rgba(22,119,255,0.5)0%] via-[#b2e0ff] via-80% to-[rgba(22,119,255,0.5)50%] bg-clip-text text-transparent text-[0.8rem] font-normal tracking-wider uppercase top-[-1rem] px-2"
@@ -235,7 +235,7 @@
             <div class="flex flex-wrap">
               <div
                 id="about1"
-                class="tentang w-full pl-34 mb-10"
+                class="tentang w-full md:pl-34 px-12.5 mb-10"
                 aria-hidden="true"
               >
                 <h4
@@ -305,7 +305,7 @@
                 </div> -->
 
                 <a
-                  href="./Portfoliopage/portfolio.html"
+                  href="portfolio.html"
                   id="button-lihatport"
                   class="button button--stroke items-center shadow-[rgba(8,0,245,0.1)] scale-100 border-none rounded-[6.25rem] backdrop-blur-2xl bg-[rgba(255,255,255,0.8)] text-[rgba(0,0,0,0.8)] stroke-2 stroke-[rgba(0,0,0,0.8)] cursor-pointer inline-flex text-[1rem] font-[600] gap-[0.363636em] justify-center leading-[1.04545] tracking-[-0.01em] px-[0.9375rem] py-[1rem] relative no-underline break-words hover:text-[rgba(1,0,41,1)] hover:stroke-[rgba(1,0,41,1)] hover:shadow-2xl hover:shadow-[rgba(12,93,255,0.8)] overflow-hidden after:bottom-0 after:left-0 after:absolute after:right-0 after:top-0 after:border-[0.125rem] after:border-rodokputih hover:after:border-primary after:rounded-[6.25rem] after:pointer-events-none transition-[colors,transform] duration-300 ease-in-out z-10"
                   data-block="button"
@@ -549,7 +549,7 @@
           <div class="container mx-auto">
             <div class="w-full px-4">
               <div
-                class="services max-w-xl mx-auto text-center mb-16"
+                class="services max-w-xl mx-auto text-center justify-center mb-16"
                 aria-hidden="true"
               >
                 <h4 class="font-bold uppercase text-[1rem] text-primary mb-2">
@@ -561,66 +561,59 @@
                   Services
                 </h2>
               </div>
-              <div class="container flex justify-center gap-17 mx-auto my-5">
-                <div class="brandidentity w-1/5">
+              <div
+                class="container lg:flex block justify-center gap-17 lg:mx-auto lg:px-50 px-10 my-5"
+              >
+                <div class="brandidentity lg:w-1/3 w-full">
                   <img
                     src="dist/Image/IconBrand.svg"
                     alt=""
-                    class="iconbrand w-[70px] h-[70px]"
+                    class="iconbrand lg:block hidden w-[70px] h-[70px]"
                   />
                   <h3 class="pt-5 font-bold text-[2.5rem] leading-10">
                     Brand Identity
                   </h3>
                   <p class="font-medium text-[0.8rem] mt-4">
-                    Brands are the most important business assets. We create
-                    cohesive, credible, and future-proof brand identities. From
-                    strong visual architecture to strict brand guidelines, we
-                    ensure your brand looks premium and consistent in the eyes
-                    of global and local markets, building loyalty from the first
-                    glance.
+                    We ensure your brand looks premium and consistent in the
+                    eyes of global and local markets, building loyalty from the
+                    first glance.
                   </p>
                 </div>
-                <div class="digitalcontent w-1/5">
+                <div class="digitalcontent lg:w-1/3 w-full">
                   <img
                     src="dist/Image/DigitalContent.svg"
                     alt=""
-                    class="iconbrand w-[70px] h-[70px]"
+                    class="iconbrand lg:block hidden w-[70px] h-[70px]"
                   />
                   <h3 class="pt-5 font-bold text-[2.5rem] leading-10">
                     Digital Content
                   </h3>
                   <p class="font-medium text-[0.8rem] mt-4">
-                    In a fast-scrolling world dominated by AI and
-                    micro-attention, your content must captivate within the
-                    first 3 seconds. We design conversion-oriented digital
-                    content
+                    Your content must captivate within the first 3 seconds.
                     <span class="px-1 tracking-[0.1em] font-semibold"
                       >(Social Media/Ads Banner).</span
                     >
-                    Our designs are not only beautiful—they are also
-                    data-driven, attract the right audience, and maximize ROI
-                    from every impression.
+                    Attract the right audience and maximize the audience's point
+                    of view.
                   </p>
                 </div>
-                <div class="marketingmaterial w-1/5">
+                <div class="marketingmaterial lg:w-1/3 w-full">
                   <img
                     src="dist/Image/MarketingMaterial.svg"
                     alt=""
-                    class="iconbrand w-[70px] h-[70px]"
+                    class="iconbrand lg:block hidden w-[70px] h-[70px]"
                   />
                   <h3 class="pt-5 font-bold text-[2.5rem] leading-10">
                     Marketing Material
                   </h3>
                   <p class="font-medium text-[0.8rem] mt-4">
-                    Turn information into an undeniable sales tool. We design
-                    your marketing materials
+                    Turn information into an undeniable sales tool.
                     <span class="px-1 tracking-[0.1em] font-semibold"
                       >( Brochures, Company Profiles, Posters, Banner )</span
                     >
-                    into compelling visual narratives. These are physical and
-                    digital touchpoints that convey a sense of professionalism
-                    and authority, helping your sales team close deals faster
-                    and leave a lasting impression.
+                    Visual Narratives, These are physical and digital
+                    touchpoints that convey a sense of professionalism and
+                    authority.
                   </p>
                 </div>
               </div>
@@ -824,7 +817,9 @@
                   alt="logon"
                   class="w-[7.5rem] h-[3.5rem] mb-7 grayscale-100 opacity-70 hover:grayscale-0 hover:opacity-100 transition-opacity duration-300 ease-linear"
                 />
-                <h3 class="font-bold text-xl mb-2 text-slate-100">HUBUNGI</h3>
+                <h3 class="font-bold text-xl mb-2 text-slate-100">
+                  Contact us
+                </h3>
                 <div class="">
                   <div class="flex gap-3">
                     <a href="mailto:muhammadhazmiwafifa@gmail.com" class="flex"
@@ -890,11 +885,28 @@
             <div class="w-full pt-10 border-t border-slate-700 mx-7">
               <div class="block items-center justify-center">
                 <div class="flex items-center justify-center mb-5">
+                  <a
+                    href="https://www.linkedin.com/in/muhammad-hazmi-wafi-farisin-87012229a/"
+                    target="blank"
+                    class="sosmed w-9 h-9 mr-3 px-2 py-2 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:border-blue-900 hover:bg-blue-900 hover:w-13 hover:h-13 hover:scale-[1.02] hover:text-white transition-all duration-300 delay-100 ease-in-out"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="200"
+                      height="200"
+                      viewBox="0 0 464 480"
+                    >
+                      <path
+                        fill="currentColor"
+                        d="M462 274v170h-98V285q0-67-50-67q-37 0-51 36q-3 7-3 24v166h-99q1-269 0-297h99v42l-1 1h1v-1q32-49 89-49q51 0 82 34t31 100zM58 4Q33 4 17.5 18.5T2 55t15 37t39 15h1q25 0 40.5-15T113 55q-1-22-16-36.5T58 4zM7 444h99V147H7v297z"
+                      />
+                    </svg>
+                  </a>
                   <!-- Instagram -->
                   <a
                     href="https://Instagram.com/nurbanner.sidoarjo"
                     target="blank"
-                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:border-pink-500 hover:bg-gradient-to-br from-indigo-500 from-10% via-pink-500 via-30% to-orange-500 to-90% hover:w-13 hover:h-13 hover:scale-[1.1] hover:text-white transition-all duration-300 delay-100 ease-in-out"
+                    class="sosmed w-9 h-9 mr-3 px-1 py-1 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:border-pink-500 hover:bg-gradient-to-br from-indigo-500 from-10% via-pink-500 via-30% to-orange-500 to-90% hover:w-13 hover:h-13 hover:scale-[1.02] hover:text-white transition-all duration-300 delay-100 ease-in-out"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -911,7 +923,7 @@
                   <a
                     href="https://tiktok.com/@nur.banner"
                     target="blank"
-                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.01] hover:border-primary hover:bg-gray-950 hover:text-white transition-all duration-300 delay-100 ease-in-out"
+                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.02] hover:border-primary hover:bg-gray-950 hover:text-white transition-all duration-300 delay-100 ease-in-out"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -928,7 +940,7 @@
                   <a
                     href="https://www.behance.net/nurbanner"
                     target="blank"
-                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.01] delay-100 hover:border-[#172afb] hover:bg-[#172afb] hover:text-white transition-all duration-300 ease-in-out"
+                    class="sosmed w-9 h-9 mr-3 px-1.5 py-1.5 rounded-full flex justify-center items-center border border-slate-400 text-slate-400 hover:w-13 hover:h-13 hover:scale-[1.02] delay-100 hover:border-[#172afb] hover:bg-[#172afb] hover:text-white transition-all duration-300 ease-in-out"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
