Perubahan logo pada page portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
     <link
       rel="icon"
-      href="../dist/Image/iconur.png"
+      href="dist/Image/iconur.png"
       type="image/x-icon"
       class="w-[1.5rem] h-[0.2rem]"
     />
@@ -36,7 +36,7 @@
             <a href="index.html"
               ><img
                 id="logo"
-                src="../dist/Image/nur_banner.png"
+                src="dist/Image/nur_banner.png"
                 alt="logo"
                 class="flex relative justify-between items-center gap-16 py-1 px-9 left-0 top-[20px] grayscale-100 opacity-50 hover:grayscale-0 hover:opacity-100 transition-all duration-300 ease-in-out"
             /></a>
@@ -44,8 +44,11 @@
         </div>
       </header>
       <section id="Hero" class="bagian pt-20 pb-22 bg-darkbanget">
-        <div class="container mx-auto w-max">
-          <div class="gallery flex items-center translate-x-1/2 gap-3.5">
+        <div class="container mx-auto">
+          <div
+            id="gallery"
+            class="gallery flex items-center translate-x-1/5 w-max gap-3.5"
+          >
             <div
               class="bingkai relative w-50 h-90 items-center overflow-hidden grayscale-100 opacity-20 hover:grayscale-0 hover:opacity-100 active:grayscale-0 active:opacity-100 transition-all duration-300 ease-in-out"
             >
