--- a/portfolio.html
+++ b/portfolio.html
@@ -45,10 +45,7 @@
       </header>
       <section id="Hero" class="bagian pt-20 pb-22 bg-darkbanget">
         <div class="container mx-auto">
-          <div
-            id="gallery"
-            class="gallery flex items-center translate-x-1/5 w-max gap-3.5"
-          >
+          <div id="gallery" class="gallery flex items-center w-max gap-3.5">
             <div
               class="bingkai relative w-50 h-90 items-center overflow-hidden grayscale-100 opacity-20 hover:grayscale-0 hover:opacity-100 active:grayscale-0 active:opacity-100 transition-all duration-300 ease-in-out"
             >
